# 20231018-064303

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini
src/: msg_split.py  msg_split.pyi  split_msg.py
tests/: test_msg_split.py  test_split_msg.py
